# hx3d-next

./: .gitignore  CMakeLists.txt  Doxyfile  LIBRARIES.md  README.md  wscript
Engine/: CMakeLists.txt  EngineConfig.hpp.in  main.cpp
Engine/Assets/: EngineConfig.ini
Engine/Assets/Shaders/: BaseNoColor.frag.glsl  BaseNoColor.vert.glsl  BaseNoTexture.frag.glsl  BaseNoTexture.vert.glsl  BasePCT.frag.glsl  BasePCT.vert.glsl  Font.frag.glsl  Font.vert.glsl
Engine/Core/: CMakeLists.txt  Engine.cpp  Engine.hpp  Globals.cpp  Globals.hpp  Module.hpp  ModuleLoader.cpp  ModuleLoader.hpp  PlatformDetector.hpp  Root.cpp  Root.hpp  Types.hpp
Engine/Core/Exceptions/: CriticalError.hpp  Exception.hpp  FileNotFound.hpp  KeyNotFound.hpp  NotFound.hpp
Engine/Debug/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.hpp  Logger.cpp  Logger.hpp  Logger.inl.hpp  Logging.cpp  Logging.hpp  StackTraceHandler.cpp  StackTraceHandler.hpp  String.cpp  String.hpp  String.inl.hpp
Engine/Fonts/: CMakeLists.txt  Font.cpp  Font.hpp  FontAtlas.cpp  FontAtlas.hpp  FontCache.hpp  FontData.hpp  FontPack.cpp  FontPack.hpp  FontPackCache.hpp  FontRenderer.cpp  FontRenderer.hpp  FontsModule.cpp  FontsModule.hpp
Engine/Game/: CMakeLists.txt  Game.cpp  Game.hpp  Scene.cpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneLoader.cpp  SceneLoader.hpp  Transform.cpp  Transform.hpp
Engine/Graphics/: CMakeLists.txt  GLHeaders.hpp  OpenGLContext.cpp  OpenGLContext.hpp  ShaderCache.hpp  TextureCache.hpp
Engine/Graphics/Elements/: Color.cpp  Color.hpp  Drawable.cpp  Drawable.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Shader.cpp  Shader.hpp  Shader.inl.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
Engine/Input/: CMakeLists.txt  Event.hpp  InputHandler.cpp  InputHandler.hpp  InputSystem.cpp  InputSystem.hpp
Engine/Math/: CMakeLists.txt  Constants.hpp  NumberUtils.cpp  NumberUtils.hpp  Random.hpp  Transform.cpp  Transform.hpp  VectorUtils.cpp  VectorUtils.hpp
Engine/Text/: CMakeLists.txt  Conversion.hpp  Conversion.inl.hpp  Format.hpp  Format.inl.hpp  String.cpp  String.hpp  Unicode.cpp  Unicode.hpp
Engine/Text/Exceptions/: BadConversion.hpp
Engine/Tweening/: AbstractTween.cpp  AbstractTween.hpp  CMakeLists.txt  Interpolation.hpp  Interpolation.inl.hpp  MultiTween.cpp  MultiTween.hpp  Sequence.cpp  Sequence.hpp  Tween.hpp  TweenOptions.cpp  TweenOptions.hpp  TweenSystem.cpp  TweenSystem.hpp
Engine/UI/: Button.cpp  Button.hpp  CMakeLists.txt  Label.cpp  Label.hpp  Panel.cpp  Panel.hpp  TextBox.cpp  TextBox.hpp  UITransform.cpp  UITransform.hpp  Widget.cpp  Widget.hpp
Engine/UI/Layouts/: BoxLayout.cpp  BoxLayout.hpp  (+2 more)
Engine/Utils/: CMakeLists.txt  Conversion.hpp  Conversion.inl.hpp  Format.hpp  Format.inl.hpp  ResourceManager.hpp  SingletonHolder.hpp  SingletonHolder.inl.hpp  Uncopyable.hpp
Engine/Window/: CMakeLists.txt  Game.cpp  Game.hpp  Screen.cpp  Screen.hpp  ScreenLoader.cpp  ScreenLoader.hpp  Window.cpp  Window.hpp  WindowModule.cpp  WindowModule.hpp
(+90 files in other folders)
